# ed25519-zebra

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPERS.md  README.md  build.sbt  inThisBuild.sbt  jni_jar_prereq.sh
.github/: dependabot.yml
.github/workflows/: main.yml
benches/: bench.rs
ed25519jni/: Cargo.toml  README.md  build.sbt
ed25519jni/.cargo/: config
ed25519jni/jvm/: .gitignore  build.sbt
ed25519jni/jvm/project/: Deps.scala
ed25519jni/jvm/src/main/java/org/zfnd/ed25519/: Ed25519Interface.java  Signature.java  SigningKeySeed.java  VerificationKeyBytes.java
ed25519jni/jvm/src/test/scala/org/zfnd/ed25519/: Ed25519InterfaceTest.scala  SignatureTest.scala  SigningKeySeedTest.scala  TestTags.scala  VerificationKeyBytesTest.scala
ed25519jni/rust/: Cargo.toml
ed25519jni/rust/src/: lib.rs
ed25519jni/rust/src/utils/: exception.rs
ed25519jni/scripts/: jni_jar_prereq.sh
ed25519jni/src/: lib.rs  utils.rs
ed25519jni/src/main/java/org/zfnd/ed25519/: VerificationKeyBytes.java
ed25519jni/src/main/rust/: lib.rs
ed25519jni/src/main/rust/utils/: exception.rs
src/: batch.rs  ches25.rs  heea.rs  lib.rs  signing_key.rs  u256.rs  verification_key.rs
tests/: batch.rs  consensus.rs  decoding.rs  encoding.rs  heea.rs  rfc8032.rs  small_order.rs  unit_tests.rs
tests/examples/: pkcs8-v2-bad-ver-key.der  pkcs8-v2-bad-ver-key.pem  pkcs8-v2.der  pkcs8-v2.pem
tests/util/: mod.rs
