[package]
name = "ed25519-zebra"
# Before publishing:
# - update CHANGELOG.md
version = "4.0.0"
rust-version = "1.65.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/ZcashFoundation/ed25519-zebra"
description = "Zcash-flavored Ed25519 for use in Zebra."
resolver = "2"

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
# "digest" is exempt from SemVer, so we should always use a specific version
curve25519-dalek = { version = "=4.0.0-rc.2", default-features = false, features = ["alloc", "digest", "zeroize", "precomputed-tables"] }
der = { version = "0.7.1", optional = true }
ed25519 = { version = "2.2.0", default-features = false }
hashbrown = "0.14.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
pkcs8 = { version = "0.10.1", optional = true, features = ["alloc", "pem"] }
rand_core = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
zeroize = { version = "1.5", features = [ "zeroize_derive" ] }

[dev-dependencies]
rand = "0.8"
bincode = "1"
criterion = "0.5"
ed25519-zebra-legacy = { package = "ed25519-zebra", version = "1" }
color-eyre = "0.6"
once_cell = "1.4"

[features]
nightly = []
default = ["serde", "std"]
pem = ["der", "ed25519/pem"]
pkcs8 = ["dep:pkcs8"]
serde = ["dep:serde", "ed25519/serde"]
std = ["ed25519/std"]

[[test]]
name = "rfc8032"

[[test]]
name = "unit_tests"

[[test]]
name = "batch"

[[bench]]
name = "bench"
harness = false
