[package]
name = "ed25519jni"
version = "0.0.5-JNI-DEV"
authors = ["Douglas Roark <douglas.roark@gemini.com>"]
license = "MIT OR Apache-2.0"
publish = false
edition = "2018"

[dependencies]
ed25519-zebra = { path = "../../", version = "3.0.0" }
failure = "0.1.8"
jni = "0.18.0"
pkcs8 = "0.10.0"
ed25519 = { version = "2.2.0", features = ["alloc", "pem"] }

[lib]
name = "ed25519jni"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]
