[package]
name = "ed25519jni"
version = "0.0.5-JNI-DEV"
authors = ["Douglas Roark <douglas.roark@gemini.com>"]
license = "MIT OR Apache-2.0"
publish = false
edition = "2018"

[dependencies]
der = { version = "0.7.1", optional = true }
ed25519-zebra = { path = "../../", version = "3.1.0", features = ["pem", "pkcs8"] }
failure = "0.1.8"
jni = "0.21.1"
pkcs8 = { version = "0.10.1", optional = true, features = ["alloc", "pem"] }
ed25519 = { version = "2.2.0", features = ["alloc", "pem"] }

[lib]
name = "ed25519jni"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[features]
nightly = []
default = ["std"]
pem = ["der"]
pkcs8 = ["dep:pkcs8"]
std = []
